# league-qualifier

./: README.md  package-lock.json  package.json
react/src/: App.tsx
react/src/components/: MatchTable.tsx
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
src/: App.tsx  index.css
